[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "*"
scrypt = "0.11.0"
pqcrypto-dilithium = "*"
pqcrypto-traits = "*"

rand = "*"
rand_core = "0.6.3"

num-bigint = "0.4.4"

hex = "*"
base58 = "0.2.0"

serde = {version = "*", features = ["derive"]}
serde_json = "1.0.108"
bincode =  "2.0.0-rc.3"

actix-bincode = { version = "0.2.3", features = ["serde"] }
actix-rt = "2.9.0"
actix-web = "4.4.0"

local-ip-address = "0.5.6"

tokio = { version = "1.33.0", features = ["full"]}
async-trait = "0.1.74"
reqwest = "0.11.22"
regex = "1.10.2"
json = "0.12.4"
spin_sleep = "1.1.1"
