[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "*"
blake3 = "1.5.0"
p256 = "0.13.2"

rand = "*"
rand_core = "0.6.3"

num-bigint = "0.4.4"

hex = "*"
base58 = "0.2.0"
base32 = "0.4.0"

serde = {version = "*", features = ["derive"]}
serde-big-array = "0.5.1"
serde_json = "1.0.108"
json = "0.12.4"
bincode =  "2.0.0-rc.3"
regex = "1.10.2"

actix-bincode = { version = "0.2.3", features = ["serde"] }
actix-rt = "2.9.0"
actix-web = "4.5.1"
reqwest = "0.12.1"

local-ip-address = "0.6.1"

tokio = { version = "1.36.0", features = ["full"]}
async-trait = "0.1.74"

spin_sleep = "1.1.1"
rsntp = "4.0.0"

log = "0.4.20"
fern = { version = "0.6.2", features = ["colored", "chrono"] }
ctor = "0.2.6"
chrono = "0.4.33"
sha3 = "0.10.8"
curve25519-dalek = {version = "4.1.1", features = ["rand_core", "digest"]}

clap = { version = "4.4.18", features = ["derive", "color"] }

sled = "0.34.7"
anyhow = "1.0.81"
dirs = "5.0.1"
lazy_static = "1.4.0"
